Julien | Make mvn work | Updated Java version and Google format